fix on mobile

--- a/src/page/Main.css
+++ b/src/page/Main.css
@@ -1,5 +1,5 @@
 .main {
-  overflow-y: none;
+  overflow: hidden;
   height: 100vh;
   /* scroll-snap-type: y mandatory; */
 
